--- a/templates/login.html
+++ b/templates/login.html
@@ -11,31 +11,32 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <style type="text/css" media="screen">
         <!--
-        @import url("css/basic.css");
+        @import url("/css/basic.css");
         -->
     </style>
 </head>
 <body>
-<div class="login-form">
-    <form action="/examples/actions/confirmation.php" method="post">
-        <h2 class="text-center">Log in</h2>
-        <div class="form-group">
-            <input type="email" class="form-control" placeholder="Email" required="required">
-        </div>
-        <div class="form-group">
-            <input type="password" class="form-control" placeholder="Password" required="required">
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block">Log in</button>
-        </div>
-        <div class="clearfix">
-            <a href="#" class="float-right">Forgot Password?</a>
-        </div>
-    </form>
-    <p class="text-center"><a href="signup">Create an Account</a></p>
-    <div class="row">
+<!--<div class="login-form">-->
+<!--    <form action="/examples/actions/confirmation.php" method="post">-->
+<!--        <h2 class="text-center">Log in</h2>-->
+<!--        <div class="form-group">-->
+<!--            <input type="email" class="form-control" placeholder="Email" required="required">-->
+<!--        </div>-->
+<!--        <div class="form-group">-->
+<!--            <input type="password" class="form-control" placeholder="Password" required="required">-->
+<!--        </div>-->
+<!--        <div class="form-group">-->
+<!--            <button type="submit" class="btn btn-primary btn-block">Log in</button>-->
+<!--        </div>-->
+<!--        <div class="clearfix">-->
+<!--            <a href="#" class="float-right">Forgot Password?</a>-->
+<!--        </div>-->
+<!--    </form>-->
+<!--    <p class="text-center"><a href="signup">Create an Account</a></p>-->
+<div class="container">
+    <div class="row mx-auto align-middle">
         <div class="col-md-12">
-            <a class="btn btn-lg btn-google btn-block text-uppercase btn-outline" href="/google/login"><img src="https://img.icons8.com/color/16/000000/google-logo.png"> Signup Using Google</a>
+            <a class="btn btn-lg btn-google btn-block text-uppercase btn-outline" href="/google/login"><img src="https://img.icons8.com/color/16/000000/google-logo.png"> Login Using Google</a>
         </div>
     </div>
     <br>
