--- a/templates/full_recipe_page.html
+++ b/templates/full_recipe_page.html
@@ -46,7 +46,7 @@
             <span class="navbar-text">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+                    <a class="nav-link active" href="/logout">Logout</a>
                 </li>
         </ul>
       </span>
