--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-info">
@@ -21,23 +24,106 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/addrecipe">Add recipe</a>
                 </li>
-                <li class="nav-item me-5">
+                <li class="nav-item">
                     <a class="nav-link" href="/myrecipe">My recipe</a>
                 </li>
-                <li class="ms-5 me-5"></li>
-                <li class="nav-item ms-5">
-                    <div class="d-flex">
-                        <input class="form-control" style="width: 500px" type="search" id="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-dark ms-4" id="searchbtn">Search</button>
-                        <a href=""><button class="btn btn-outline-dark ms-4">Advance Search</button></a>
-                    </div>
+                <li class="nav-item" style="margin-left: 10vw">
+                    <form action="/search" id="search-form" method="post" class="d-flex">
+                        <input class="form-control" style="width: 20vw" type="search" name="search" id="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-dark ms-4" id="searchbtn" type="submit">Search</button>
+                        <div class="dropdown-center ms-4">
+                            <button class="btn btn-outline-dark dropdown-toggle dropdown-toggle-split" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Advance Search
+                            </button>
+                            <ul class="dropdown-menu" style="width: 220px">
+                                <li class="dropdown-item">Categories</li>
+                                <ul>
+                                    {{range .categories}}
+                                        <li>
+                                            <input type="checkbox" id="{{.}}" name="search-categories[]" value="{{.}}">
+                                            <label for="{{.}}" >{{.}}</label>
+                                        </li>
+                                    {{end}}
+                                </ul>
+                                <li class="dropdown-item">Type</li>
+                                <ul>
+                                    <li>
+                                        <input type="checkbox" name="search-type[]" value="vegetarian" id="vegetarian" />
+                                        <label  for="vegetarian">Vegetarian</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-type[]" value="non vegetarian" id="non-vegetarian" />
+                                        <label for="non-vegetarian">Non Vegetarian</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-type[]" value="eggetarian" id="eggetarian" />
+                                        <label for="eggetarian">Eggetarian</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-type[]" value="vegan" id="vegan" />
+                                        <label for="vegan">Vegan</label>
+                                    </li>
+                                </ul>
+                                <li class="dropdown-item">Courses</li>
+                                <ul>
+                                    <li>
+                                        <input type="checkbox" name="search-meals[]" value="breakfast" id="breakfast" />
+                                        <label  for="breakfast">Breakfast</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-meals[]" value="brunch" id="brunch" />
+                                        <label for="brunch">Brunch</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-meals[]" value="lunch" id="lunch" />
+                                        <label for="lunch">Lunch</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-meals[]" value="snack" id="snack" />
+                                        <label for="snack">Snack</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-meals[]" value="dinner" id="dinner" />
+                                        <label for="dinner">Dinner</label>
+                                    </li>
+                                </ul>
+                                <li class="dropdown-item">Sorting</li>
+                                <ul>
+                                    <li>
+                                        <input type="radio" name="search-sort" value="title" id="title"/>
+                                        <label for="titleAcs">Title (A - Z)</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" name="search-sort" value="title desc" id="titleDesc"/>
+                                        <label for="titleDesc">Title (Z - A)</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" name="search-sort" value="rating" id="rating"/>
+                                        <label for="rating">Rating (High To Low)</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
+                                        <label for="ratingDesc">Rating (Low To High)</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" name="search-sort" value="date" id="date"/>
+                                        <label for="date">Date (Old To New)</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" name="search-sort" value="date desc" id="dateDesc"/>
+                                        <label for="dateDesc">Date (New To Old)</label>
+                                    </li>
+                                </ul>
+                            </ul>
+                        </div>
+                    </form>
                 </li>
             </ul>
 
             <span class="navbar-text">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="http://localhost:8080/logout">Logout</a>
+                            <a class="nav-link active" href="/logout">Logout</a>
                         </li>
                 </ul>
             </span>
@@ -71,17 +157,13 @@
 </div>
 </body>
 <script>
-    $("#searchbtn").click(function () {
-        str = $("#search").val()
-        url = "/search?query=" + str
-        location.href = url
-    });
-    $("#search").keydown(function (e) {
-        if (e.keyCode == 13) {
-            str = $("#search").val()
-            url = "/search?query=" + str
-            location.href = url
-        }
-    });
+    // $("#searchbtn").click(function () {
+    //     $("#search-form").submit()
+    // });
+    // $("#search").keydown(function (e) {
+    //     if (e.keyCode == 13) {
+    //         $("#search-form").submit()
+    //     }
+    // });
 </script>
 </html>
