--- a/templates/full_recipe_page.html
+++ b/templates/full_recipe_page.html
@@ -9,6 +9,9 @@
           integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
           crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+
     <style type="text/css" media="screen">
         <!--
         @import url("/css/recipe.css");
@@ -36,11 +39,95 @@
                 </li>
                 <li class="ms-5 me-5"></li>
                 <li class="nav-item ms-5">
-                    <div class="d-flex">
-                        <input class="form-control" style="width: 500px" id="search" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-dark ms-4" id="searchbtn">Search</button>
-                        <a href=""><button class="btn btn-outline-dark ms-4">Advance Search</button></a>
-                    </div>
+                    <form action="/search" id="search-form" method="post" class="d-flex">
+                        <input class="form-control" style="width: 20vw" type="search" name="search" id="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-dark ms-4" id="searchbtn" type="submit">Search</button>
+                        <div class="dropdown-center ms-4">
+                            <button class="btn btn-outline-dark dropdown-toggle dropdown-toggle-split" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Advance Search
+                            </button>
+                            <ul class="dropdown-menu" style="width: 220px">
+                                <li class="dropdown-item">Categories</li>
+                                <ul>
+                                    {{range .categories}}
+                                        <li>
+                                            <input type="checkbox" id="{{.}}" name="search-categories[]" value="{{.}}">
+                                            <label for="{{.}}" >{{.}}</label>
+                                        </li>
+                                    {{end}}
+                                </ul>
+                                <li class="dropdown-item">Type</li>
+                                <ul>
+                                    <li>
+                                        <input type="checkbox" name="search-type[]" value="vegetarian" id="vegetarian" />
+                                        <label  for="vegetarian">Vegetarian</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-type[]" value="non vegetarian" id="non-vegetarian" />
+                                        <label for="non-vegetarian">Non Vegetarian</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-type[]" value="eggetarian" id="eggetarian" />
+                                        <label for="eggetarian">Eggetarian</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-type[]" value="vegan" id="vegan" />
+                                        <label for="vegan">Vegan</label>
+                                    </li>
+                                </ul>
+                                <li class="dropdown-item">Courses</li>
+                                <ul>
+                                    <li>
+                                        <input type="checkbox" name="search-meals[]" value="breakfast" id="breakfast" />
+                                        <label  for="breakfast">Breakfast</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-meals[]" value="brunch" id="brunch" />
+                                        <label for="brunch">Brunch</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-meals[]" value="lunch" id="lunch" />
+                                        <label for="lunch">Lunch</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-meals[]" value="snack" id="snack" />
+                                        <label for="snack">Snack</label>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" name="search-meals[]" value="dinner" id="dinner" />
+                                        <label for="dinner">Dinner</label>
+                                    </li>
+                                </ul>
+                                <li class="dropdown-item">Sorting</li>
+                                <ul>
+                                    <li>
+                                        <input type="radio" name="search-sort" value="title" id="title"/>
+                                        <label for="titleAcs">Title (A - Z)</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" name="search-sort" value="title desc" id="titleDesc"/>
+                                        <label for="titleDesc">Title (Z - A)</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" name="search-sort" value="rating" id="rating"/>
+                                        <label for="rating">Rating (High To Low)</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
+                                        <label for="ratingDesc">Rating (Low To High)</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" name="search-sort" value="date" id="date"/>
+                                        <label for="date">Date (Old To New)</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" name="search-sort" value="date desc" id="dateDesc"/>
+                                        <label for="dateDesc">Date (New To Old)</label>
+                                    </li>
+                                </ul>
+                            </ul>
+                        </div>
+                    </form>
                 </li>
             </ul>
             <span class="navbar-text">
@@ -59,7 +146,7 @@
             <div class="row justify-content-center">
                 <div class="col-12">
                     <div  class="card mb-2 shadow-sm">
-                        <img class="mx-auto my-2" width="300" height="200" src="/Upload/{{ .recipe.ImageURL}}"></img>
+                        <img class="mx-auto my-2" width="560" height="315" src="/Upload/{{ .recipe.ImageURL}}"></img>
                         <div class="card-body">
                             <section class="intro">
                                 <div class="container">
@@ -78,6 +165,10 @@
                                                                 <tr>
                                                                     <td class="w-25">Description :</td>
                                                                     <td class="w-75">{{.recipe.Description}}</td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td class="w-25">Average Rating :</td>
+                                                                    <td class="w-75">{{.recipe.AvgRating}}</td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td class="w-25">Cooking Time :</td>
@@ -118,6 +209,11 @@
                                                                 <tr>
                                                                     <td class="w-25">Cooking Steps : </td>
                                                                     <td class="w-75" id="steps"><p class="w-100" style="white-space: break-spaces;">{{.recipe.CookingSteps}}</p></td>
+                                                                </tr>
+                                                                <tr id="video-block">
+                                                                    <td class="text-center" colspan="2">
+                                                                        <iframe width="560" id="video" height="315" src="{{.recipe.VideoURL}}"></iframe>
+                                                                    </td>
                                                                 </tr>
                                                             <tr>
                                                                 <td colspan="2">
@@ -196,6 +292,10 @@
             location.href = url
         }
     });
+    if ($("#video").attr("src") == "") {
+        $("#video-block").addClass("d-none")
+    }
+
     $(async function(){
         $('#better-rating-form').betterRating();
         const response = await fetch('http://localhost:8080/api/review/Get_review/'+{{.recipe.ID}}, {
