--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Home</a>
+                    <a class="nav-link active" href="">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/addrecipe">Add recipe</a>
@@ -146,6 +146,7 @@
                                 <p>Type : {{.Type}}</p>
                                 <p>Courses : {{.Meals}}</p>
                                 <p>Difficulty Level : {{.DifficultyLevel}}</p>
+                                <p>Rating : {{.AvgRating}}</p>
                             </div>
                         </div>
                     </div>
