--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -37,92 +37,8 @@
         <li class="nav-item ms-5">
           <form action="/search" id="search-form" method="post" class="d-flex">
             <input class="form-control rounded" style="width: 20vw" type="search" name="search" id="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-dark ms-4 rounded" id="searchbtn" type="submit">Search</button>
-            <div class="dropdown-center ms-4">
-              <button class="btn btn-outline-dark dropdown-toggle dropdown-toggle-split rounded" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Advance Search
-              </button>
-              <ul class="dropdown-menu" style="width: 220px">
-                <li class="dropdown-item">Categories</li>
-                <ul>
-                  {{range .categories}}
-                    <li>
-                      <input type="checkbox" id="{{.}}" name="search-categories[]" value="{{.}}">
-                      <label for="{{.}}" >{{.}}</label>
-                    </li>
-                  {{end}}
-                </ul>
-                <li class="dropdown-item">Type</li>
-                <ul>
-                  <li>
-                    <input type="checkbox" name="search-type[]" value="vegetarian" id="vegetarian" />
-                    <label  for="vegetarian">Vegetarian</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-type[]" value="non vegetarian" id="non-vegetarian" />
-                    <label for="non-vegetarian">Non Vegetarian</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-type[]" value="eggetarian" id="eggetarian" />
-                    <label for="eggetarian">Eggetarian</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-type[]" value="vegan" id="vegan" />
-                    <label for="vegan">Vegan</label>
-                  </li>
-                </ul>
-                <li class="dropdown-item">Courses</li>
-                <ul>
-                  <li>
-                    <input type="checkbox" name="search-meals[]" value="breakfast" id="breakfast" />
-                    <label  for="breakfast">Breakfast</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-meals[]" value="brunch" id="brunch" />
-                    <label for="brunch">Brunch</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-meals[]" value="lunch" id="lunch" />
-                    <label for="lunch">Lunch</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-meals[]" value="snack" id="snack" />
-                    <label for="snack">Snack</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-meals[]" value="dinner" id="dinner" />
-                    <label for="dinner">Dinner</label>
-                  </li>
-                </ul>
-                <li class="dropdown-item">Sorting</li>
-                <ul>
-                  <li>
-                    <input type="radio" name="search-sort" value="title" id="title"/>
-                    <label for="titleAcs">Title (A - Z)</label>
-                  </li>
-                  <li>
-                    <input type="radio" name="search-sort" value="title desc" id="titleDesc"/>
-                    <label for="titleDesc">Title (Z - A)</label>
-                  </li>
-                  <li>
-                    <input type="radio" name="search-sort" value="rating" id="rating"/>
-                    <label for="rating">Rating (High To Low)</label>
-                  </li>
-                  <li>
-                    <input type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
-                    <label for="ratingDesc">Rating (Low To High)</label>
-                  </li>
-                  <li>
-                    <input type="radio" name="search-sort" value="date" id="date"/>
-                    <label for="date">Date (Old To New)</label>
-                  </li>
-                  <li>
-                    <input type="radio" name="search-sort" value="date desc" id="dateDesc"/>
-                    <label for="dateDesc">Date (New To Old)</label>
-                  </li>
-                </ul>
-              </ul>
-            </div>
+            <button class="btn btn-outline-dark ms-4 rounded" id="searchbtn" type="button">Search</button>
+            <button class="btn btn-outline-dark ms-4 rounded" data-bs-toggle="modal" data-bs-target="#modalSignin" type="button" id="adv">Advance Search</button>
           </form>
         </li>
       </ul>
@@ -136,7 +52,114 @@
     </div>
   </div>
 </nav>
-<div class="login-form">
+<div class="modal fade modal-lg" style="width: 800px;margin: 0px 550px auto;" tabindex="-1" role="dialog" id="modalSignin">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content rounded-4 shadow">
+      <div class="modal-header p-5 pb-4 border-bottom-0">
+        <h1 class="fw-bold mb-0 fs-2">Advance Search</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body p-5 pt-0">
+        <ul class="nav nav-pills mb-3 nav-fill" id="ex1" role="tablist">
+          <li class="nav-item" role="presentation">
+            <a class="nav-link active" id="ex1-tab-1" data-bs-toggle="pill" href="#ex1-pills-1" role="tab"
+               aria-controls="ex1-pills-1" aria-selected="true">Categories</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="ex1-tab-2" data-bs-toggle="pill" href="#ex1-pills-2" role="tab"
+               aria-controls="ex1-pills-2" aria-selected="false">Meal Type</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="ex1-tab-3" data-bs-toggle="pill" href="#ex1-pills-3" role="tab"
+               aria-controls="ex1-pills-3" aria-selected="false">Courses</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="ex1-tab-4" data-bs-toggle="pill" href="#ex1-pills-4" role="tab"
+               aria-controls="ex1-pills-4" aria-selected="false">Sorting</a>
+          </li>
+        </ul>
+        <div class="tab-content" id="ex1-content">
+          <div class="tab-pane fade show active row" id="ex1-pills-1" role="tabpanel" aria-labelledby="ex1-tab-1">
+            {{range .categories}}
+              <fieldset class="d-inline-block col-3 mx-3">
+                <input form="search-form" class="" type="checkbox" id="src{{.}}" name="search-categories[]" value="{{.}}">
+                <label  for="src{{.}}" > {{.}}</label>
+              </fieldset>
+            {{end}}
+          </div>
+          <div class="tab-pane fade row" id="ex1-pills-2" role="tabpanel" aria-labelledby="ex1-tab-2">
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-type[]" value="vegetarian" id="srcvegetarian" />
+              <label  for="srcvegetarian">Vegetarian</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-type[]" value="non vegetarian" id="srcnon-vegetarian" />
+              <label for="srcnon-vegetarian">Non Vegetarian</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-type[]" value="eggetarian" id="srceggetarian" />
+              <label for="srceggetarian">Eggetarian</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-type[]" value="vegan" id="srcvegan" />
+              <label for="srcvegan">Vegan</label>
+            </fieldset>
+
+          </div>
+          <div class="tab-pane fade row" id="ex1-pills-3" role="tabpanel" aria-labelledby="ex1-tab-3">
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-meals[]" value="breakfast" id="srcbreakfast" />
+              <label  for="srcbreakfast">Breakfast</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-meals[]" value="brunch" id="srcbrunch" />
+              <label for="srcbrunch">Brunch</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-meals[]" value="lunch" id="srclunch" />
+              <label for="srclunch">Lunch</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-meals[]" value="snack" id="srcsnack" />
+              <label for="srcsnack">Snack</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-meals[]" value="dinner" id="srcdinner" />
+              <label for="srcdinner">Dinner</label>
+            </fieldset>
+          </div>
+          <div class="tab-pane fade row" id="ex1-pills-4" role="tabpanel" aria-labelledby="ex1-tab-4">
+            <fieldset class="d-inline-block col-5 mx-4">
+              <input form="search-form" type="radio" name="search-sort" value="title" id="title"/>
+              <label for="title">Title (A - Z)</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-5 mx-4">
+              <input form="search-form" type="radio" name="search-sort" value="title desc" id="titleDesc"/>
+              <label for="titleDesc">Title (Z - A)</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-5 mx-4">
+              <input form="search-form" type="radio" name="search-sort" value="rating" id="rating"/>
+              <label for="rating">Rating (High To Low)</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-5 mx-4">
+              <input form="search-form" type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
+              <label for="ratingDesc">Rating (Low To High)</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-5 mx-4">
+              <input form="search-form" type="radio" name="search-sort" value="recipes.created_at" id="date"/>
+              <label for="date">Date (Old To New)</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-5 mx-4">
+              <input form="search-form" type="radio" name="search-sort" value="recipes.created_at desc" id="dateDesc"/>
+              <label for="dateDesc">Date (New To Old)</label>
+            </fieldset>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="login-form" >
     <form action="/api/recipe/Add_recipe" method="post" enctype='multipart/form-data'>
         <h2 class="text-center">Add recipe</h2>
       <input type="hidden" name="email" id="email" value="{{ .email}}">
@@ -149,37 +172,57 @@
         <div class="form-group form-control">
           <p class="d-inline">Type :</p>
           <div class="d-inline col-3">
-            <input type="radio" name="type" value="vegetarian" id="vegetarian" />
-            <label  for="vegetarian">Vegetarian</label>
-            <input type="radio" name="type" value="non vegetarian" id="non-vegetarian" />
-            <label for="non-vegetarian">Non Vegetarian</label>
-            <input type="radio" name="type" value="eggetarian" id="eggetarian" />
-            <label for="eggetarian">Eggetarian</label>
-            <input type="radio" name="type" value="vegan" id="vegan" />
-            <label for="vegan">Vegan</label>
+            <fieldset class="d-inline-block">
+              <input type="radio" name="type" value="vegetarian" id="vegetarian" />
+              <label  for="vegetarian">Vegetarian</label>
+            </fieldset>
+            <fieldset class="d-inline-block">
+              <input type="radio" name="type" value="non vegetarian" id="non-vegetarian" />
+              <label for="non-vegetarian">Non Vegetarian</label>
+            </fieldset>
+            <fieldset class="d-inline-block">
+              <input type="radio" name="type" value="eggetarian" id="eggetarian" />
+              <label for="eggetarian">Eggetarian</label>
+            </fieldset>
+            <fieldset class="d-inline-block">
+              <input type="radio" name="type" value="vegan" id="vegan" />
+              <label for="vegan">Vegan</label>
+            </fieldset>
           </div>
         </div>
       <div class="form-group form-control">
         <p class="d-inline">Meals :</p>
         <div class="d-inline col-3">
-          <input type="checkbox" name="meals[]" value="breakfast" id="breakfast" />
-          <label  for="breakfast">Breakfast</label>
-          <input type="checkbox" name="meals[]" value="brunch" id="brunch" />
-          <label for="brunch">Brunch</label>
-          <input type="checkbox" name="meals[]" value="lunch" id="lunch" />
-          <label for="lunch">Lunch</label>
-          <input type="checkbox" name="meals[]" value="snack" id="snack" />
-          <label for="snack">Snack</label>
-          <input type="checkbox" name="meals[]" value="dinner" id="dinner" />
-          <label for="dinner">Dinner</label>
+          <fieldset class="d-inline-block">
+            <input type="checkbox" name="meals[]" value="breakfast" id="breakfast" />
+            <label  for="breakfast">Breakfast</label>
+          </fieldset>
+          <fieldset class="d-inline-block">
+            <input type="checkbox" name="meals[]" value="brunch" id="brunch" />
+            <label for="brunch">Brunch</label>
+          </fieldset>
+          <fieldset class="d-inline-block">
+            <input type="checkbox" name="meals[]" value="lunch" id="lunch" />
+            <label for="lunch">Lunch</label>
+          </fieldset>
+          <fieldset class="d-inline-block">
+            <input type="checkbox" name="meals[]" value="snack" id="snack" />
+            <label for="snack">Snack</label>
+          </fieldset>
+          <fieldset class="d-inline-block">
+            <input type="checkbox" name="meals[]" value="dinner" id="dinner" />
+            <label for="dinner">Dinner</label>
+          </fieldset>
         </div>
       </div>
       <div class="form-group form-control cate">
         <p class="d-inline">Categories :</p>
         <div class="d-inline ">
           {{range .categories}}
-          <input type="checkbox" name="categories[]" value="{{ .}}" id="{{ .}}" />
-          <label for="{{ .}}">{{ .}} </label>
+          <fieldset class="d-inline-block">
+            <input type="checkbox" name="categories[]" value="{{ .}}" id="{{ .}}" />
+            <label for="{{ .}}">{{ .}} </label>
+          </fieldset>
           {{end}}
         </div>
       </div>
@@ -192,12 +235,18 @@
       <div class="form-group form-control">
         <p class="d-inline">Difficulty Level :</p>
         <div class="d-inline col-3">
-          <input type="radio" name="difficulty" value="beginner" id="beginner" />
-          <label for="beginner">Beginner</label>
-          <input type="radio" name="difficulty" value="intermediate" id="intermediate" />
-          <label for="intermediate">Intermediate</label>
-          <input type="radio" name="difficulty" value="advance" id="advance" />
-          <label for="advance">Advance</label>
+          <fieldset class="d-inline-block">
+            <input type="radio" name="difficulty" value="beginner" id="beginner" />
+            <label for="beginner">Beginner</label>
+          </fieldset>
+          <fieldset class="d-inline-block">
+            <input type="radio" name="difficulty" value="intermediate" id="intermediate" />
+            <label for="intermediate">Intermediate</label>
+          </fieldset>
+          <fieldset class="d-inline-block">
+            <input type="radio" name="difficulty" value="advance" id="advance" />
+            <label for="advance">Advance</label>
+          </fieldset>
         </div>
       </div>
       <div class="form-group">
@@ -225,15 +274,11 @@
 </body>
 <script>
   $("#searchbtn").click(function () {
-    str = $("#search").val()
-    url = "/search?query=" + str
-    location.href = url
+    $("#search-form").submit()
   });
   $("#search").keydown(function (e) {
     if (e.keyCode == 13) {
-      str = $("#search").val()
-      url = "/search?query=" + str
-      location.href = url
+      $("#search-form").submit()
     }
   });
 </script>
