--- a/templates/css/basic.css
+++ b/templates/css/basic.css
@@ -3,7 +3,7 @@
     margin: 50px auto;
     font-size: 15px;
 }
-.login-form form {
+.login-form {
     margin-bottom: 15px;
     background: #f7f7f7;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
@@ -13,7 +13,7 @@
     margin: 0 0 5px;
 }
 
-.form-control, .btn {
+.form-control {
     min-height: 38px;
     border-radius: 2px;
 }
