--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -38,92 +38,8 @@
         <li class="nav-item ms-5">
           <form action="/search" id="search-form" method="post" class="d-flex">
             <input class="form-control rounded" style="width: 20vw" type="search" name="search" id="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-dark ms-4 rounded" id="searchbtn" type="submit">Search</button>
-            <div class="dropdown-center ms-4">
-              <button class="btn btn-outline-dark dropdown-toggle dropdown-toggle-split rounded" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Advance Search
-              </button>
-              <ul class="dropdown-menu" style="width: 220px">
-                <li class="dropdown-item">Categories</li>
-                <ul>
-                  {{range .categories}}
-                    <li>
-                      <input type="checkbox" id="{{.}}" name="search-categories[]" value="{{.}}">
-                      <label for="{{.}}" >{{.}}</label>
-                    </li>
-                  {{end}}
-                </ul>
-                <li class="dropdown-item">Type</li>
-                <ul>
-                  <li>
-                    <input type="checkbox" name="search-type[]" value="vegetarian" id="vegetarian" />
-                    <label  for="vegetarian">Vegetarian</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-type[]" value="non vegetarian" id="non-vegetarian" />
-                    <label for="non-vegetarian">Non Vegetarian</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-type[]" value="eggetarian" id="eggetarian" />
-                    <label for="eggetarian">Eggetarian</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-type[]" value="vegan" id="vegan" />
-                    <label for="vegan">Vegan</label>
-                  </li>
-                </ul>
-                <li class="dropdown-item">Courses</li>
-                <ul>
-                  <li>
-                    <input type="checkbox" name="search-meals[]" value="breakfast" id="breakfast" />
-                    <label  for="breakfast">Breakfast</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-meals[]" value="brunch" id="brunch" />
-                    <label for="brunch">Brunch</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-meals[]" value="lunch" id="lunch" />
-                    <label for="lunch">Lunch</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-meals[]" value="snack" id="snack" />
-                    <label for="snack">Snack</label>
-                  </li>
-                  <li>
-                    <input type="checkbox" name="search-meals[]" value="dinner" id="dinner" />
-                    <label for="dinner">Dinner</label>
-                  </li>
-                </ul>
-                <li class="dropdown-item">Sorting</li>
-                <ul>
-                  <li>
-                    <input type="radio" name="search-sort" value="title" id="title"/>
-                    <label for="titleAcs">Title (A - Z)</label>
-                  </li>
-                  <li>
-                    <input type="radio" name="search-sort" value="title desc" id="titleDesc"/>
-                    <label for="titleDesc">Title (Z - A)</label>
-                  </li>
-                  <li>
-                    <input type="radio" name="search-sort" value="rating" id="rating"/>
-                    <label for="rating">Rating (High To Low)</label>
-                  </li>
-                  <li>
-                    <input type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
-                    <label for="ratingDesc">Rating (Low To High)</label>
-                  </li>
-                  <li>
-                    <input type="radio" name="search-sort" value="date" id="date"/>
-                    <label for="date">Date (Old To New)</label>
-                  </li>
-                  <li>
-                    <input type="radio" name="search-sort" value="date desc" id="dateDesc"/>
-                    <label for="dateDesc">Date (New To Old)</label>
-                  </li>
-                </ul>
-              </ul>
-            </div>
+            <button class="btn btn-outline-dark ms-4 rounded" id="searchbtn" type="button">Search</button>
+            <button class="btn btn-outline-dark ms-4 rounded" data-bs-toggle="modal" data-bs-target="#modalSignin" type="button" id="adv">Advance Search</button>
           </form>
         </li>
       </ul>
@@ -137,13 +53,120 @@
     </div>
   </div>
 </nav>
+<div class="modal fade modal-lg" style="width: 800px;margin: 0px 550px auto;" tabindex="-1" role="dialog" id="modalSignin">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content rounded-4 shadow">
+      <div class="modal-header p-5 pb-4 border-bottom-0">
+        <h1 class="fw-bold mb-0 fs-2">Advance Search</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body p-5 pt-0">
+        <ul class="nav nav-pills mb-3 nav-fill" id="ex1" role="tablist">
+          <li class="nav-item" role="presentation">
+            <a class="nav-link active" id="ex1-tab-1" data-bs-toggle="pill" href="#ex1-pills-1" role="tab"
+               aria-controls="ex1-pills-1" aria-selected="true">Categories</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="ex1-tab-2" data-bs-toggle="pill" href="#ex1-pills-2" role="tab"
+               aria-controls="ex1-pills-2" aria-selected="false">Meal Type</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="ex1-tab-3" data-bs-toggle="pill" href="#ex1-pills-3" role="tab"
+               aria-controls="ex1-pills-3" aria-selected="false">Courses</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="ex1-tab-4" data-bs-toggle="pill" href="#ex1-pills-4" role="tab"
+               aria-controls="ex1-pills-4" aria-selected="false">Sorting</a>
+          </li>
+        </ul>
+        <div class="tab-content" id="ex1-content">
+          <div class="tab-pane fade show active row" id="ex1-pills-1" role="tabpanel" aria-labelledby="ex1-tab-1">
+            {{range .categories}}
+              <fieldset class="d-inline-block col-3 mx-3">
+                <input form="search-form" class="" type="checkbox" id="src{{.}}" name="search-categories[]" value="{{.}}">
+                <label  for="src{{.}}" > {{.}}</label>
+              </fieldset>
+            {{end}}
+          </div>
+          <div class="tab-pane fade row" id="ex1-pills-2" role="tabpanel" aria-labelledby="ex1-tab-2">
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-type[]" value="vegetarian" id="srcvegetarian" />
+              <label  for="srcvegetarian">Vegetarian</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-type[]" value="non vegetarian" id="srcnon-vegetarian" />
+              <label for="srcnon-vegetarian">Non Vegetarian</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-type[]" value="eggetarian" id="srceggetarian" />
+              <label for="srceggetarian">Eggetarian</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-type[]" value="vegan" id="srcvegan" />
+              <label for="srcvegan">Vegan</label>
+            </fieldset>
+
+          </div>
+          <div class="tab-pane fade row" id="ex1-pills-3" role="tabpanel" aria-labelledby="ex1-tab-3">
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-meals[]" value="breakfast" id="srcbreakfast" />
+              <label  for="srcbreakfast">Breakfast</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-meals[]" value="brunch" id="srcbrunch" />
+              <label for="srcbrunch">Brunch</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-meals[]" value="lunch" id="srclunch" />
+              <label for="srclunch">Lunch</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-meals[]" value="snack" id="srcsnack" />
+              <label for="srcsnack">Snack</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-3 mx-3">
+              <input form="search-form" type="checkbox" name="search-meals[]" value="dinner" id="srcdinner" />
+              <label for="srcdinner">Dinner</label>
+            </fieldset>
+          </div>
+          <div class="tab-pane fade row" id="ex1-pills-4" role="tabpanel" aria-labelledby="ex1-tab-4">
+            <fieldset class="d-inline-block col-5 mx-4">
+              <input form="search-form" type="radio" name="search-sort" value="title" id="srctitle"/>
+              <label for="srctitle">Title (A - Z)</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-5 mx-4">
+              <input form="search-form" type="radio" name="search-sort" value="title desc" id="titleDesc"/>
+              <label for="titleDesc">Title (Z - A)</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-5 mx-4">
+              <input form="search-form" type="radio" name="search-sort" value="rating" id="rating"/>
+              <label for="rating">Rating (High To Low)</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-5 mx-4">
+              <input form="search-form" type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
+              <label for="ratingDesc">Rating (Low To High)</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-5 mx-4">
+              <input form="search-form" type="radio" name="search-sort" value="recipes.created_at" id="date"/>
+              <label for="date">Date (Old To New)</label>
+            </fieldset>
+            <fieldset class="d-inline-block col-5 mx-4">
+              <input form="search-form" type="radio" name="search-sort" value="recipes.created_at desc" id="dateDesc"/>
+              <label for="dateDesc">Date (New To Old)</label>
+            </fieldset>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="login-form">
   <form action="/api/recipe/Edit_recipe" method="post" enctype='multipart/form-data'>
     <h2 class="text-center">Edit recipe</h2>
     <input type="hidden" name="id" id="id" value="{{ .ID}}">
     <input type="hidden" name="email" id="email" value="{{ .email}}">
     <div class="form-group">
-      <input type="text" name="title" id="title" class="form-control" value="" placeholder="Recipe Name" required="required">
+      <input type="text" name="title" id="title" class="form-control" placeholder="Recipe Name" required="required">
     </div>
     <div class="form-group">
       <input type="text" name="description" id="description" value="{{.recipe.Description}}" class="form-control" placeholder="Description" required="required">
@@ -180,8 +203,10 @@
       <p class="d-inline">Categories :</p>
       <div class="d-inline ">
         {{range .categories}}
-        <input type="checkbox" class="categories_checkbox" name="categories[]" value="{{ .}}" id="{{ .}}" />
-        <label for="{{ .}}">{{ .}}</label>
+          <fieldset class="d-inline-block">
+            <input type="checkbox" class="categories_checkbox" name="categories[]" value="{{ .}}" id="{{ .}}" />
+            <label for="{{ .}}">{{ .}}</label>
+          </fieldset>
         {{end}}
       </div>
     </div>
@@ -211,9 +236,12 @@
     <div class="form-group form-control">
       <p class="d-inline">Images of Food : </p>
       <div class="d-inline">
-        <input type="file" placeholder="images" id="files" name="files" required="required" value="{{.recipe.ImageURL}}" accept="image/jpeg image/png">
-        <label for="files" id="filelable">files</label>
+        <input type="file" placeholder="images" id="files" name="files" value="" accept="image/jpeg image/png">
       </div>
+    </div>
+    <div class="form-group form-control" id="uploadedfile">
+      <p class="d-inline">Previously Uploaded File : </p>
+      <label for="files" id="filelable">files</label>
     </div>
     <div class="form-group">
       <input class="form-control" type="url" placeholder="Video URL" value="" name="url" id="url" >
@@ -227,31 +255,39 @@
 </div>
 </body>
 <script>
-    $("#searchbtn").click(function () {
-    str = $("#search").val()
-    url = "/search?query=" + str
-    location.href = url
-    });
-    $("#search").keydown(function (e) {
-      if (e.keyCode == 13) {
-        str = $("#search").val()
-        url = "/search?query=" + str
-        location.href = url
-      }
-    });
+  $("#searchbtn").click(function () {
+    $("#search-form").submit()
+  });
+  $("#search").keydown(function (e) {
+    if (e.keyCode == 13) {
+      $("#search-form").submit()
+    }
+  });
     $(document).ready(async function() {
         const id = $("#id").val();
         const response = await fetch('http://localhost:8080/findrecipe/'+id, {
           method: "POST",
         });
         const data = await response.json();
-        $("#title").val(data["title"]);
+        $("#title").attr("value", data["title"])
         $("#description").val(data["description"]);
         $("#cookingsteps").val(data["cookingSteps"]);
         $("#cookingtime").val(data["cookingTime"]);
         $("#ingredients").val(data["ingredients"]);
         $("#serving").val(data["serving"]);
         $("#url").val(data["videoURL"]);
+      if (data["category"] != undefined) {
+        data["category"].forEach(function (category) {
+          checkboxes = $(".categories_checkbox")
+          checkboxes.each(function () {
+            if (this.value === category["name"]) {
+              this.checked = true
+            }
+          });
+        });
+      }
+
+      $("#filelable").text(data["imageURL"])
 
       mealsArr = data["meals"].split(", ")
 
@@ -263,20 +299,10 @@
 
       $("#"+data["difficultyLevel"]).prop("checked", true);
 
-      data["category"].forEach(function (category) {
-        checkboxes = $(".categories_checkbox")
-        checkboxes.each(function() {
-          if (this.value === category["name"]) {
-            this.checked = true
-          }
-        });
-      });
-
-      $("#filelable").text(data["imageURL"])
-
       $("#files").change(function () {
-        $("#filelable").text("")
+        $("#uploadedfile").addClass("d-none")
       })
     });
+
 </script>
 </html>
