--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,18 @@
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+          integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+          crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+    <style type="text/css" media="screen">
+        <!--
+        @import url("/css/better-rating.css");
+        -->
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-info">
@@ -30,96 +39,11 @@
                 <li class="nav-item" style="margin-left: 10vw">
                     <form action="/search" id="search-form" method="post" class="d-flex">
                         <input class="form-control" style="width: 20vw" type="search" name="search" id="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-dark ms-4" id="searchbtn" type="submit">Search</button>
-                        <div class="dropdown-center ms-4">
-                            <button class="btn btn-outline-dark dropdown-toggle dropdown-toggle-split" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Advance Search
-                            </button>
-                            <ul class="dropdown-menu" style="width: 220px">
-                                <li class="dropdown-item">Categories</li>
-                                <ul>
-                                    {{range .categories}}
-                                        <li>
-                                            <input type="checkbox" id="{{.}}" name="search-categories[]" value="{{.}}">
-                                            <label for="{{.}}" >{{.}}</label>
-                                        </li>
-                                    {{end}}
-                                </ul>
-                                <li class="dropdown-item">Type</li>
-                                <ul>
-                                    <li>
-                                        <input type="checkbox" name="search-type[]" value="vegetarian" id="vegetarian" />
-                                        <label  for="vegetarian">Vegetarian</label>
-                                    </li>
-                                    <li>
-                                        <input type="checkbox" name="search-type[]" value="non vegetarian" id="non-vegetarian" />
-                                        <label for="non-vegetarian">Non Vegetarian</label>
-                                    </li>
-                                    <li>
-                                        <input type="checkbox" name="search-type[]" value="eggetarian" id="eggetarian" />
-                                        <label for="eggetarian">Eggetarian</label>
-                                    </li>
-                                    <li>
-                                        <input type="checkbox" name="search-type[]" value="vegan" id="vegan" />
-                                        <label for="vegan">Vegan</label>
-                                    </li>
-                                </ul>
-                                <li class="dropdown-item">Courses</li>
-                                <ul>
-                                    <li>
-                                        <input type="checkbox" name="search-meals[]" value="breakfast" id="breakfast" />
-                                        <label  for="breakfast">Breakfast</label>
-                                    </li>
-                                    <li>
-                                        <input type="checkbox" name="search-meals[]" value="brunch" id="brunch" />
-                                        <label for="brunch">Brunch</label>
-                                    </li>
-                                    <li>
-                                        <input type="checkbox" name="search-meals[]" value="lunch" id="lunch" />
-                                        <label for="lunch">Lunch</label>
-                                    </li>
-                                    <li>
-                                        <input type="checkbox" name="search-meals[]" value="snack" id="snack" />
-                                        <label for="snack">Snack</label>
-                                    </li>
-                                    <li>
-                                        <input type="checkbox" name="search-meals[]" value="dinner" id="dinner" />
-                                        <label for="dinner">Dinner</label>
-                                    </li>
-                                </ul>
-                                <li class="dropdown-item">Sorting</li>
-                                <ul>
-                                    <li>
-                                        <input type="radio" name="search-sort" value="title" id="title"/>
-                                        <label for="titleAcs">Title (A - Z)</label>
-                                    </li>
-                                    <li>
-                                        <input type="radio" name="search-sort" value="title desc" id="titleDesc"/>
-                                        <label for="titleDesc">Title (Z - A)</label>
-                                    </li>
-                                    <li>
-                                        <input type="radio" name="search-sort" value="rating" id="rating"/>
-                                        <label for="rating">Rating (High To Low)</label>
-                                    </li>
-                                    <li>
-                                        <input type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
-                                        <label for="ratingDesc">Rating (Low To High)</label>
-                                    </li>
-                                    <li>
-                                        <input type="radio" name="search-sort" value="date" id="date"/>
-                                        <label for="date">Date (Old To New)</label>
-                                    </li>
-                                    <li>
-                                        <input type="radio" name="search-sort" value="date desc" id="dateDesc"/>
-                                        <label for="dateDesc">Date (New To Old)</label>
-                                    </li>
-                                </ul>
-                            </ul>
-                        </div>
+                        <button class="btn btn-outline-dark ms-4" id="searchbtn" type="button">Search</button>
+                        <button class="btn btn-outline-dark ms-4" data-bs-toggle="modal" data-bs-target="#modalSignin" type="button" id="adv">Advance Search</button>
                     </form>
                 </li>
             </ul>
-
             <span class="navbar-text">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -130,27 +54,146 @@
         </div>
     </div>
 </nav>
+<div class="modal fade modal-lg" tabindex="-1" role="dialog" id="modalSignin">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content rounded-4 shadow">
+            <div class="modal-header p-5 pb-4 border-bottom-0">
+                <h1 class="fw-bold mb-0 fs-2">Advance Search</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body p-5 pt-0">
+                <ul class="nav nav-pills mb-3 nav-fill" id="ex1" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link active" id="ex1-tab-1" data-bs-toggle="pill" href="#ex1-pills-1" role="tab"
+                           aria-controls="ex1-pills-1" aria-selected="true">Categories</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="ex1-tab-2" data-bs-toggle="pill" href="#ex1-pills-2" role="tab"
+                           aria-controls="ex1-pills-2" aria-selected="false">Meal Type</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="ex1-tab-3" data-bs-toggle="pill" href="#ex1-pills-3" role="tab"
+                           aria-controls="ex1-pills-3" aria-selected="false">Courses</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="ex1-tab-4" data-bs-toggle="pill" href="#ex1-pills-4" role="tab"
+                           aria-controls="ex1-pills-4" aria-selected="false">Sorting</a>
+                    </li>
+                </ul>
+                <div class="tab-content" id="ex1-content">
+                    <div class="tab-pane fade show active row" id="ex1-pills-1" role="tabpanel" aria-labelledby="ex1-tab-1">
+                        {{range .categories}}
+                            <fieldset class="d-inline-block col-3 mx-3">
+                                <input form="search-form" class="" type="checkbox" id="{{.}}" name="search-categories[]" value="{{.}}">
+                                <label  for="{{.}}" > {{.}}</label>
+                            </fieldset>
+                        {{end}}
+                    </div>
+                    <div class="tab-pane fade row" id="ex1-pills-2" role="tabpanel" aria-labelledby="ex1-tab-2">
+                        <fieldset class="d-inline-block col-3 mx-3">
+                            <input form="search-form" type="checkbox" name="search-type[]" value="vegetarian" id="vegetarian" />
+                            <label  for="vegetarian">Vegetarian</label>
+                        </fieldset>
+                        <fieldset class="d-inline-block col-3 mx-3">
+                            <input form="search-form" type="checkbox" name="search-type[]" value="non vegetarian" id="non-vegetarian" />
+                            <label for="non-vegetarian">Non Vegetarian</label>
+                        </fieldset>
+                        <fieldset class="d-inline-block col-3 mx-3">
+                            <input form="search-form" type="checkbox" name="search-type[]" value="eggetarian" id="eggetarian" />
+                            <label for="eggetarian">Eggetarian</label>
+                        </fieldset>
+                        <fieldset class="d-inline-block col-3 mx-3">
+                            <input form="search-form" type="checkbox" name="search-type[]" value="vegan" id="vegan" />
+                            <label for="vegan">Vegan</label>
+                        </fieldset>
+
+                    </div>
+                    <div class="tab-pane fade row" id="ex1-pills-3" role="tabpanel" aria-labelledby="ex1-tab-3">
+                        <fieldset class="d-inline-block col-3 mx-3">
+                            <input form="search-form" type="checkbox" name="search-meals[]" value="breakfast" id="breakfast" />
+                            <label  for="breakfast">Breakfast</label>
+                        </fieldset>
+                        <fieldset class="d-inline-block col-3 mx-3">
+                            <input form="search-form" type="checkbox" name="search-meals[]" value="brunch" id="brunch" />
+                            <label for="brunch">Brunch</label>
+                        </fieldset>
+                        <fieldset class="d-inline-block col-3 mx-3">
+                            <input form="search-form" type="checkbox" name="search-meals[]" value="lunch" id="lunch" />
+                            <label for="lunch">Lunch</label>
+                        </fieldset>
+                        <fieldset class="d-inline-block col-3 mx-3">
+                            <input form="search-form" type="checkbox" name="search-meals[]" value="snack" id="snack" />
+                            <label for="snack">Snack</label>
+                        </fieldset>
+                        <fieldset class="d-inline-block col-3 mx-3">
+                            <input form="search-form" type="checkbox" name="search-meals[]" value="dinner" id="dinner" />
+                            <label for="dinner">Dinner</label>
+                        </fieldset>
+                    </div>
+                    <div class="tab-pane fade row" id="ex1-pills-4" role="tabpanel" aria-labelledby="ex1-tab-4">
+                        <fieldset class="d-inline-block col-5 mx-4">
+                            <input form="search-form" type="radio" name="search-sort" value="title" id="title"/>
+                            <label for="title">Title (A - Z)</label>
+                        </fieldset>
+                        <fieldset class="d-inline-block col-5 mx-4">
+                            <input form="search-form" type="radio" name="search-sort" value="title desc" id="titleDesc"/>
+                            <label for="titleDesc">Title (Z - A)</label>
+                        </fieldset>
+                        <fieldset class="d-inline-block col-5 mx-4">
+                            <input form="search-form" type="radio" name="search-sort" value="rating" id="rating"/>
+                            <label for="rating">Rating (High To Low)</label>
+                        </fieldset>
+                        <fieldset class="d-inline-block col-5 mx-4">
+                            <input form="search-form" type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
+                            <label for="ratingDesc">Rating (Low To High)</label>
+                        </fieldset>
+                        <fieldset class="d-inline-block col-5 mx-4">
+                            <input form="search-form" type="radio" name="search-sort" value="recipes.created_at" id="date"/>
+                            <label for="date">Date (Old To New)</label>
+                        </fieldset>
+                        <fieldset class="d-inline-block col-5 mx-4">
+                            <input form="search-form" type="radio" name="search-sort" value="recipes.created_at desc" id="dateDesc"/>
+                            <label for="dateDesc">Date (New To Old)</label>
+                        </fieldset>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <div class="container-fluid">
     <div class="album py-4 bg-light">
         <div class="container">
             <div class="row justify-content-center">
                 {{range .recipes}}
-                <div class="col-xl-4 col-md-8" >
-                    <div  class="card mb-2 shadow-sm">
-                        <div class="card-body">
-                            <img width="300" height="200" src="Upload/{{ .ImageURL}}"></img>
-                            <div class="card-text">
-                                <a href="/fullrecipe/{{.ID}}" class="text-reset"><h4>{{.Title}}</h4></a>
-                                <p>Time : {{.CookingTime}} Minutes</p>
-                                <p>Serves : {{.Serving}} Person</p>
-                                <p>Type : {{.Type}}</p>
-                                <p>Courses : {{.Meals}}</p>
-                                <p>Difficulty Level : {{.DifficultyLevel}}</p>
-                                <p>Rating : {{.AvgRating}}</p>
+                    <div class="col-xl-4 col-md-8" >
+                        <div  class="card mb-2 shadow-sm">
+                            <div class="card-body">
+                                <img width="300" height="200" src="Upload/{{ .ImageURL}}"></img>
+                                <div class="card-text">
+                                    <a href="/fullrecipe/{{.ID}}" class="text-reset"><h4>{{.Title}}</h4></a>
+                                    <input type="hidden" name="id" value="{{.ID}}">
+                                    <input type="hidden" name="avgrating{{.ID}}" value="{{.AvgRating}}">
+                                    <p>Time : {{.CookingTime}} Minutes</p>
+                                    <p>Serves : {{.Serving}} Person</p>
+                                    <p>Type : {{.Type}}</p>
+                                    <p>Courses : {{.Meals}}</p>
+                                    <p>Difficulty Level : {{.DifficultyLevel}}</p>
+                                    <p>Rating :
+                                    <div id="rating{{.ID}}">
+                                        <i class="fa fa-star fs-2 rating{{.ID}}star1" data-rate="1"></i>
+                                        <i class="fa fa-star fs-2 rating{{.ID}}star2" data-rate="2"></i>
+                                        <i class="fa fa-star fs-2 rating{{.ID}}star3" data-rate="3"></i>
+                                        <i class="fa fa-star fs-2 rating{{.ID}}star4" data-rate="4"></i>
+                                        <i class="fa fa-star fs-2 rating{{.ID}}star5" data-rate="5"></i>
+                                    </div>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
                 {{end}}
             </div>
         </div>
@@ -158,13 +201,23 @@
 </div>
 </body>
 <script>
-    // $("#searchbtn").click(function () {
-    //     $("#search-form").submit()
-    // });
-    // $("#search").keydown(function (e) {
-    //     if (e.keyCode == 13) {
-    //         $("#search-form").submit()
-    //     }
-    // });
+    $(document).ready(function () {
+        $("input[name='id']").each(function () {
+            str = "input[name='avgrating"+ $(this).val() + "']"
+            for (let i = 1; i <= $(str).val(); i++) {
+                star = ".rating"+ $(this).val() +"star"+i
+                $(star).addClass("selected")
+            }
+        })
+    })
+
+    $("#searchbtn").click(function () {
+        $("#search-form").submit()
+    });
+    $("#search").keydown(function (e) {
+        if (e.keyCode == 13) {
+            $("#search-form").submit()
+        }
+    });
 </script>
 </html>
