--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Login Form</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/b2a400ec90.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -36,7 +36,8 @@
 <div class="container">
     <div class="row mx-auto align-middle">
         <div class="col-md-12">
-            <a class="btn btn-lg btn-google btn-block text-uppercase btn-outline" href="/google/login"><img src="https://img.icons8.com/color/16/000000/google-logo.png"> Login Using Google</a>
+            <a class="btn btn-lg btn-google btn-block text-uppercase btn-outline" href="/google/login"><i class="fa-brands fa-google"></i> Login Using Google</a>
+            <a class="btn btn-lg btn-microsoft btn-block text-uppercase btn-outline" href="/microsoft/login"><i class="fa-brands fa-microsoft"></i> Login Using Microsoft</a>
         </div>
     </div>
     <br>
