--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Add Recipe</title>
+  <link rel="icon" type="image/x-icon" href="/css/favicon.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -139,11 +140,11 @@
             </fieldset>
             <fieldset class="d-inline-block col-5 mx-4">
               <input form="search-form" type="radio" name="search-sort" value="rating" id="rating"/>
-              <label for="rating">Rating (High To Low)</label>
+              <label for="rating">Rating (Low To High)</label>
             </fieldset>
             <fieldset class="d-inline-block col-5 mx-4">
               <input form="search-form" type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
-              <label for="ratingDesc">Rating (Low To High)</label>
+              <label for="ratingDesc">Rating (High To Low)</label>
             </fieldset>
             <fieldset class="d-inline-block col-5 mx-4">
               <input form="search-form" type="radio" name="search-sort" value="recipes.created_at" id="date"/>
