--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Edit Recipe</title>
+  <link rel="icon" type="image/x-icon" href="/css/favicon.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -140,11 +141,11 @@
             </fieldset>
             <fieldset class="d-inline-block col-5 mx-4">
               <input form="search-form" type="radio" name="search-sort" value="rating" id="rating"/>
-              <label for="rating">Rating (High To Low)</label>
+              <label for="rating">Rating (Low To High)</label>
             </fieldset>
             <fieldset class="d-inline-block col-5 mx-4">
               <input form="search-form" type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
-              <label for="ratingDesc">Rating (Low To High)</label>
+              <label for="ratingDesc">Rating (High To Low)</label>
             </fieldset>
             <fieldset class="d-inline-block col-5 mx-4">
               <input form="search-form" type="radio" name="search-sort" value="recipes.created_at" id="date"/>
@@ -163,13 +164,13 @@
 <div class="login-form">
   <form action="/api/recipe/Edit_recipe" method="post" enctype='multipart/form-data'>
     <h2 class="text-center">Edit recipe</h2>
-    <input type="hidden" name="id" id="id" value="{{ .ID}}">
-    <input type="hidden" name="email" id="email" value="{{ .email}}">
+    <input type="hidden" name="id" id="id" value="{{.ID}}">
+    <input type="hidden" name="email" id="email" value="{{.email}}">
     <div class="form-group">
       <input type="text" name="title" id="title" class="form-control" placeholder="Recipe Name" required="required">
     </div>
     <div class="form-group">
-      <input type="text" name="description" id="description" value="{{.recipe.Description}}" class="form-control" placeholder="Description" required="required">
+      <input type="text" name="description" id="description" value="" class="form-control" placeholder="Description" required="required">
     </div>
     <div class="form-group form-control">
       <p class="d-inline">Type :</p>
@@ -211,10 +212,10 @@
       </div>
     </div>
     <div class="form-group">
-      <input type="number" name="cookingtime" id="cookingtime" value="{{.recipe.CookingTime}}" class="form-control" placeholder="Cooking Time (in minutes)" required="required">
+      <input type="number" name="cookingtime" id="cookingtime" value="" class="form-control" placeholder="Cooking Time (in minutes)" required="required">
     </div>
     <div class="form-group">
-      <input type="number" name="serving" id="serving" class="form-control" value="{{.recipe.Serving}}" placeholder="Serves (i.e. : 3 person)" required="required">
+      <input type="number" name="serving" id="serving" class="form-control" value="" placeholder="Serves (i.e. : 3 person)" required="required">
     </div>
     <div class="form-group form-control">
       <p class="d-inline">Difficulty Level :</p>
@@ -231,7 +232,7 @@
       <textarea class="form-control" name="ingredients" id="ingredients" rows="10" placeholder="Ingredients" required="required"></textarea>
     </div>
     <div class="form-group">
-      <textarea class="form-control" name="cookingsteps" id="cookingsteps" rows="10"  placeholder="Cooking Steps" required="required">{{.recipe.CookingSteps}}</textarea>
+      <textarea class="form-control" name="cookingsteps" id="cookingsteps" rows="10"  placeholder="Cooking Steps" required="required"></textarea>
     </div>
     <div class="form-group form-control">
       <p class="d-inline">Images of Food : </p>
@@ -263,46 +264,46 @@
       $("#search-form").submit()
     }
   });
-    $(document).ready(async function() {
-        const id = $("#id").val();
-        const response = await fetch('http://localhost:8080/findrecipe/'+id, {
-          method: "POST",
-        });
-        const data = await response.json();
-        $("#title").attr("value", data["title"])
-        $("#description").val(data["description"]);
-        $("#cookingsteps").val(data["cookingSteps"]);
-        $("#cookingtime").val(data["cookingTime"]);
-        $("#ingredients").val(data["ingredients"]);
-        $("#serving").val(data["serving"]);
-        $("#url").val(data["videoURL"]);
-      if (data["category"] != undefined) {
-        data["category"].forEach(function (category) {
-          checkboxes = $(".categories_checkbox")
-          checkboxes.each(function () {
-            if (this.value === category["name"]) {
-              this.checked = true
-            }
-          });
-        });
-      }
-
-      $("#filelable").text(data["imageURL"])
-
-      mealsArr = data["meals"].split(", ")
-
-      mealsArr.forEach(function (meal) {
-        $("#"+meal).prop("checked", true);
-      })
-
-      $("#"+data["type"]).prop("checked", true);
-
-      $("#"+data["difficultyLevel"]).prop("checked", true);
-
-      $("#files").change(function () {
-        $("#uploadedfile").addClass("d-none")
-      })
+  $(document).ready(async function() {
+    const id = $("#id").val();
+    const response = await fetch('http://localhost:8080/api/recipe/findrecipe/'+id, {
+      method: "POST",
     });
+    const data = await response.json();
+    $("#title").attr("value", data["title"])
+    $("#description").val(data["description"]);
+    $("#cookingsteps").val(data["cooking_steps"]);
+    $("#cookingtime").val(data["cooking_time"]);
+    $("#ingredients").val(data["ingredients"]);
+    $("#serving").val(data["serving"]);
+    $("#url").val(data["video_url"]);
+    $("#filelable").text(data["image_url"])
 
+    mealsArr = data["meals"].split(", ")
+
+    mealsArr.forEach(function (meal) {
+      $("#"+meal).prop("checked", true);
+    })
+
+    $("#"+data["type"]).prop("checked", true);
+
+    $("#"+data["difficulty_level"]).prop("checked", true);
+
+    $("#files").change(function () {
+      $("#uploadedfile").addClass("d-none")
+    })
+
+    if (data["category"] != "") {
+      const arr = data['categories'].split(', ')
+      arr.forEach(function (category) {
+        checkboxes = $(".categories_checkbox")
+        checkboxes.each(function () {
+          if (this.value === category) {
+            this.checked = true
+          }
+        });
+      });
+    }
+  });
 </script>
 </html>
