--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="/css/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet"
           href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
@@ -141,11 +142,11 @@
                         </fieldset>
                         <fieldset class="d-inline-block col-5 mx-4">
                             <input form="search-form" type="radio" name="search-sort" value="rating" id="rating"/>
-                            <label for="rating">Rating (High To Low)</label>
+                            <label for="rating">Rating (Low To High)</label>
                         </fieldset>
                         <fieldset class="d-inline-block col-5 mx-4">
                             <input form="search-form" type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
-                            <label for="ratingDesc">Rating (Low To High)</label>
+                            <label for="ratingDesc">Rating (High To Low)</label>
                         </fieldset>
                         <fieldset class="d-inline-block col-5 mx-4">
                             <input form="search-form" type="radio" name="search-sort" value="recipes.created_at" id="date"/>
@@ -171,23 +172,23 @@
                     <div class="col-xl-4 col-md-8" >
                         <div  class="card mb-2 shadow-sm">
                             <div class="card-body">
-                                <img width="300" height="200" src="Upload/{{ .ImageURL}}"></img>
+                                <img width="300" height="200" src="Upload/{{ .image_url}}"></img>
                                 <div class="card-text">
-                                    <a href="/fullrecipe/{{.ID}}" class="text-reset"><h4>{{.Title}}</h4></a>
-                                    <input type="hidden" name="id" value="{{.ID}}">
-                                    <input type="hidden" name="avgrating{{.ID}}" value="{{.AvgRating}}">
-                                    <p>Time : {{.CookingTime}} Minutes</p>
-                                    <p>Serves : {{.Serving}} Person</p>
-                                    <p>Type : {{.Type}}</p>
-                                    <p>Courses : {{.Meals}}</p>
-                                    <p>Difficulty Level : {{.DifficultyLevel}}</p>
+                                    <a href="/fullrecipe/{{.id}}" class="text-reset"><h4>{{.title}}</h4></a>
+                                    <input type="hidden" name="id" value="{{.id}}">
+                                    <input type="hidden" name="avgrating{{.id}}" value="{{.avg_rating}}">
+                                    <p>Time : {{.cooking_time}} Minutes</p>
+                                    <p>Serves : {{.serving}} Person</p>
+                                    <p>Type : {{.type}}</p>
+                                    <p>Courses : {{.meals}}</p>
+                                    <p>Difficulty Level : {{.difficulty_level}}</p>
                                     <p>Rating :
-                                    <div id="rating{{.ID}}">
-                                        <i class="fa fa-star fs-2 rating{{.ID}}star1" data-rate="1"></i>
-                                        <i class="fa fa-star fs-2 rating{{.ID}}star2" data-rate="2"></i>
-                                        <i class="fa fa-star fs-2 rating{{.ID}}star3" data-rate="3"></i>
-                                        <i class="fa fa-star fs-2 rating{{.ID}}star4" data-rate="4"></i>
-                                        <i class="fa fa-star fs-2 rating{{.ID}}star5" data-rate="5"></i>
+                                    <div id="rating{{.id}}">
+                                        <i class="fa fa-star fs-2 rating{{.id}}star1" data-rate="1"></i>
+                                        <i class="fa fa-star fs-2 rating{{.id}}star2" data-rate="2"></i>
+                                        <i class="fa fa-star fs-2 rating{{.id}}star3" data-rate="3"></i>
+                                        <i class="fa fa-star fs-2 rating{{.id}}star4" data-rate="4"></i>
+                                        <i class="fa fa-star fs-2 rating{{.id}}star5" data-rate="5"></i>
                                     </div>
                                     </p>
                                 </div>
