--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -81,12 +81,6 @@
         </ul>
         <div class="tab-content" id="ex1-content">
           <div class="tab-pane fade show active row" id="ex1-pills-1" role="tabpanel" aria-labelledby="ex1-tab-1">
-            {{range .categories}}
-              <fieldset class="d-inline-block col-3 mx-3">
-                <input form="search-form" class="" type="checkbox" id="src{{.}}" name="search-categories[]" value="{{.}}">
-                <label  for="src{{.}}" > {{.}}</label>
-              </fieldset>
-            {{end}}
           </div>
           <div class="tab-pane fade row" id="ex1-pills-2" role="tabpanel" aria-labelledby="ex1-tab-2">
             <fieldset class="d-inline-block col-3 mx-3">
@@ -218,13 +212,8 @@
       </div>
       <div class="form-group form-control cate">
         <p class="d-inline">Categories :</p>
-        <div class="d-inline ">
-          {{range .categories}}
-          <fieldset class="d-inline-block">
-            <input type="checkbox" name="categories[]" value="{{ .}}" id="{{ .}}" />
-            <label for="{{ .}}">{{ .}} </label>
-          </fieldset>
-          {{end}}
+        <div class="d-inline" id="categories-holder">
+
         </div>
       </div>
       <div class="form-group">
@@ -281,6 +270,29 @@
     if (e.keyCode == 13) {
       $("#search-form").submit()
     }
+  });
+  $(document).ready(async function() {
+    const response = await fetch('http://localhost:8080/api/category/Get_Categories', {
+      method: "POST",
+    });
+    const data = await response.json();
+    console.log(data)
+    var str = ""
+    data.forEach(function (cate) {
+      str += `<fieldset class="d-inline-block">`
+      str += `<input class="mx-1" type="checkbox" name="categories[]" value="` + cate + `" id="` + cate + `" />`
+      str += `<label for="` + cate + `">` + cate + ` </label>`
+      str += `</fieldset>`
+    })
+    $("#categories-holder").append(str)
+      str = ""
+      data.forEach(function (cate) {
+        str += `<fieldset class="d-inline-block col-3 mx-3">`
+        str += `<input form="search-form" class="mx-1" type="checkbox" name="search-categories[]" value="` + cate + `" id="src` + cate + `" />`
+        str += `<label for="src` + cate + `">` + cate + ` </label>`
+        str += `</fieldset>`
+      })
+      $("#ex1-pills-1").append(str)
   });
 </script>
 </html>
